test/resources/parser/failing/zomtest10.scala
object ReservedWords {
  val if: Int = 1;
  val match: Int = 2;
  if + match
}